--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "devDependencies": {
+    "@types/node": "^22.7.6",
+    "husky": "^9.1.6",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.3"
+  },
+  "scripts": {
+    "format": "prettier --write \"**/*.ts\"",
+    "prepare": "husky"
   }
 }
