--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
-  "devDependencies": {
-    "@types/node": "^22.7.6",
-    "husky": "^9.1.6",
-    "prettier": "^3.3.3",
-    "typescript": "^5.6.3"
-  },
+  "name": "todolist",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
+    "start": "ts-node ./src/index.ts",
+    "start:prod": "npm run build && node dist/index.js",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"**/*.ts\"",
     "prepare": "husky"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@types/node": "^22.7.6",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0",
+    "husky": "^9.1.6",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.3.0"
   }
 }
